--- a/gallery.css
+++ b/gallery.css
@@ -19,8 +19,12 @@ body {
 }
 
 .nav-bar-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
     position: relative;
     z-index: 5;
 }
@@ -28,8 +32,11 @@ body {
 .nav-bar-sub-main {
     position: relative;
     z-index: 8;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     /* margin-left: 75vw;*/
     margin-left: 1.5vw;
     margin-right: 5vh;
@@ -40,14 +47,19 @@ body {
 .line-divider-main {
     z-index: 5;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
 }
 
 .line-divider {
     width: 27vw;
     border-radius: none;
-    box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
+    -webkit-box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
+            box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
     border-bottom: black 1px solid;
     margin: -3vh 6vw 0vh 60%;
 }
@@ -55,8 +67,12 @@ body {
 .nav-bar-main-photo {
     position: absolute;
     z-index: 10;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-left: 5vh;
 }
 
@@ -82,8 +98,12 @@ body {
     height: auto;
     cursor: pointer;
     position: relative;
-    transition-duration: 0.4s;
+    -webkit-transition-duration: 0.4s;
+         -o-transition-duration: 0.4s;
+            transition-duration: 0.4s;
     text-align: center;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     color: rgb(4, 4, 4);
     background-color: rgba(0, 0, 0, 0);
@@ -97,6 +117,8 @@ body {
     /* velikost borderu horního před hoverem */
     height: 11px;
     position: absolute;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
     transition: 0.4s;
     cursor: pointer;
 }
@@ -106,6 +128,8 @@ body {
     width: 11px;
     height: 11px;
     position: absolute;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
     transition: 0.4s;
     cursor: pointer;
 }
@@ -144,7 +168,8 @@ body {
 
 .nav-bar-sub-main button:hover {
     /* transform: scale(110%); */
-    box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
 }
 
 /* [class^="box-"] {
@@ -163,27 +188,38 @@ body {
     scale: .85;
     max-width: 100%;
     max-height: auto;
-    box-shadow: 0px 10px 25px 0px rgb(121, 119, 119, 0.7);
-    transition-duration: .3s;
+    -webkit-box-shadow: 0px 10px 25px 0px rgb(121, 119, 119, 0.7);
+            box-shadow: 0px 10px 25px 0px rgb(121, 119, 119, 0.7);
+    -webkit-transition-duration: .3s;
+         -o-transition-duration: .3s;
+            transition-duration: .3s;
     cursor: context-menu;
 }
 
 .content-sub-main img:hover {
-    box-shadow: 0px 0px 45px 10px rgb(121, 119, 119, 0.5);
-    transition-duration: .3;
-    transform: scale(115%);
+    -webkit-box-shadow: 0px 0px 45px 10px rgb(121, 119, 119, 0.5);
+            box-shadow: 0px 0px 45px 10px rgb(121, 119, 119, 0.5);
+    -webkit-transition-duration: .3;
+         -o-transition-duration: .3;
+            transition-duration: .3;
+    -webkit-transform: scale(115%);
+        -ms-transform: scale(115%);
+            transform: scale(115%);
     cursor: context-menu;
 }
 
 .content-sub-main {
     margin-top: 4vh;
     margin-bottom: 10vh;
+    display: -ms-grid;
     display: grid;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     justify-items: center;
     gap: 2% 2%;
     cursor: context-menu;
-    grid-template-areas:
+        grid-template-areas:
         "A A A A  B B B B"
         "C C C C  D D D D"
         "E E E E  F F F F"
@@ -193,42 +229,72 @@ body {
 }
 
 .box-1 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 7;
     grid-area: A;
 }
 
 .box-2 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 9;
+    -ms-grid-column-span: 7;
     grid-area: B;
 }
 
 .box-3 {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 7;
     grid-area: C;
 }
 
 .box-4 {
+    -ms-grid-row: 3;
+    -ms-grid-column: 9;
+    -ms-grid-column-span: 7;
     grid-area: D
 }
 
 .box-5 {
+    -ms-grid-row: 5;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 7;
     grid-area: E
 }
 
 .box-6 {
+    -ms-grid-row: 5;
+    -ms-grid-column: 9;
+    -ms-grid-column-span: 7;
     grid-area: F
 }
 
 .box-7 {
+    -ms-grid-row: 7;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 7;
     grid-area: G
 }
 
 .box-8 {
+    -ms-grid-row: 7;
+    -ms-grid-column: 9;
+    -ms-grid-column-span: 7;
     grid-area: H
 }
 
 .box-9 {
+    -ms-grid-row: 9;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 7;
     grid-area: I
 }
 
 .box-10 {
+    -ms-grid-row: 9;
+    -ms-grid-column: 9;
+    -ms-grid-column-span: 7;
     grid-area: J;
 }
 
@@ -237,8 +303,12 @@ body {
     background-color: rgba(199, 194, 188, 0.205);
     font-weight: 600;
     font-size: 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     position: relative;
     opacity: .8;
     padding: 1%;
