--- a/about.css
+++ b/about.css
@@ -19,8 +19,12 @@ body {
 }
 
 .nav-bar-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
     position: relative;
     z-index: 5;
 }
@@ -28,8 +32,11 @@ body {
 .nav-bar-sub-main {
     position: relative;
     z-index: 8;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     /* margin-left: 75vw;*/
     margin-left: 1.5vw;
     margin-right: 5vh;
@@ -40,14 +47,19 @@ body {
 .line-divider-main {
     z-index: 5;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
 }
 
 .line-divider {
     width: 27vw;
     border-radius: none;
-    box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
+    -webkit-box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
+            box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
     border-bottom: black 1px solid;
     margin: -3vh 6vw 0vh 60%;
 }
@@ -55,8 +67,12 @@ body {
 .nav-bar-main-photo {
     position: absolute;
     z-index: 10;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-left: 5vh;
 }
 
@@ -82,8 +98,12 @@ body {
     height: auto;
     cursor: pointer;
     position: relative;
-    transition-duration: 0.4s;
+    -webkit-transition-duration: 0.4s;
+         -o-transition-duration: 0.4s;
+            transition-duration: 0.4s;
     text-align: center;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     color: rgb(4, 4, 4);
     background-color: rgba(0, 0, 0, 0);
@@ -95,6 +115,8 @@ body {
     width: 11px;
     height: 11px;
     position: absolute;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
     transition: 0.4s;
     cursor: pointer;
 }
@@ -104,6 +126,8 @@ body {
     width: 11px;
     height: 11px;
     position: absolute;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
     transition: 0.4s;
     cursor: pointer;
 }
@@ -137,7 +161,8 @@ body {
 }
 
 .nav-bar-sub-main button:hover {
-    box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
 }
 #first-grid{
     background-image: url(background-about-2.jpg);
@@ -160,34 +185,45 @@ body {
     margin-right: 3vw;
     margin-bottom: 0vh;
     margin-left: 3vw;
+    display: -ms-grid;
     display: grid;
     gap: 12vh 0%;
-    grid-template-areas:
+        grid-template-areas:
         "A A A A"
         "B B B B";
 }
 
 .box-1 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 7;
     grid-area: A;
-    justify-self: center;
+    -ms-grid-column-align: center;
+        justify-self: center;
     margin-top: 5vh;    
     max-width: 55vw;
     padding: 3vh 3vw 3vh 3vw;
     border: 1px solid rgba(0, 0, 0, 0);
-    box-shadow: -30px 50px 40px -15px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: -30px 50px 40px -15px rgba(0, 0, 0, 0.2);
+            box-shadow: -30px 50px 40px -15px rgba(0, 0, 0, 0.2);
     background-color: white;
     border-radius: 2px;
     font-size: 0.9vw;
 }
 
 .box-2 {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 7;
     grid-area: B;    
-    justify-self: center;
+    -ms-grid-column-align: center;    
+        justify-self: center;
     max-width: 65vw;
     padding: 3vh 3vw 3vh 3vw;
     border: 1px solid rgba(0, 0, 0, 0);
     background-color: white;
-    box-shadow: -10px -30px 40px -15px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: -10px -30px 40px -15px rgba(0, 0, 0, 0.1);
+            box-shadow: -10px -30px 40px -15px rgba(0, 0, 0, 0.1);
     border-radius: 2px;
     font-size: 0.9vw;
 }
@@ -228,10 +264,255 @@ body {
     background-color: rgba(199, 194, 188, 0.205);
     font-weight: 600;
     font-size: 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     position: relative;
     opacity: .8;
     padding: 1%;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;   
+}
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation: portrait){
+    body{
+        background-color: red;
+    }
+    .nav-bar-main {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        position: relative;
+        z-index: 5;
+    }
+    
+    .nav-bar-sub-main {
+        position: relative;
+        z-index: 8;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: space-evenly;
+            -ms-flex-pack: space-evenly;
+                justify-content: space-evenly;
+        padding: 1%;
+        background-color: rgba(0, 245, 90, 0.959);
+    }
+    
+    .line-divider-main {
+        z-index: 5;
+        position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+    }
+    
+    .line-divider {
+        width: 60vw;
+        border-radius: none;
+        -webkit-box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
+                box-shadow: 0px 15px 12px -10px rgba(0, 0, 0, 0.58);
+        border-bottom: black 1px solid;
+        margin: -3vh 0vw 0vh 0vw;
+    }   
+    
+    .nav-bar-sub-main button {
+        scale: .7;
+        text-decoration: none;
+        font-size: 1.3rem;
+        padding-top: .5vh;
+        padding-right: .9vh;
+        padding-bottom: .5vh;
+        padding-left: .9vh;
+        width: -webkit-fit-content;
+        width: -moz-fit-content;
+        width: fit-content;
+        height: auto;
+        cursor: pointer;
+        position: relative;
+        -webkit-transition-duration: 0.4s;
+             -o-transition-duration: 0.4s;
+                transition-duration: 0.4s;
+        text-align: center;
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
+        display: inline-flex;
+        color: rgb(4, 4, 4);
+        background-color: rgba(0, 0, 0, 0);
+        border: rgb(4, 4, 4);
+    }
+    
+    .nav-bar-sub-main button::after {
+        content: "";
+        width: 11px;
+        height: 11px;
+        position: absolute;
+        -webkit-transition: 0.4s;
+        -o-transition: 0.4s;
+        transition: 0.4s;
+        cursor: pointer;
+    }
+    
+    .nav-bar-sub-main button::before {
+        content: "";
+        width: 11px;
+        height: 11px;
+        position: absolute;
+        -webkit-transition: 0.4s;
+        -o-transition: 0.4s;
+        transition: 0.4s;
+        cursor: pointer;
+    }
+    
+    .nav-bar-sub-main button::after {
+        top: -1px;
+        left: -1px;
+        border-top: rgb(4, 4, 4) 2px solid;
+        border-left: rgb(4, 4, 4) 2px solid;
+        cursor: pointer;
+    }
+    
+    .nav-bar-sub-main button::before {
+        bottom: -1px;
+        right: -1px;
+        border-bottom: rgb(4, 4, 4) 2px solid;
+        border-right: rgb(4, 4, 4) 2px solid;
+        cursor: pointer;
+    }
+    
+    .nav-bar-sub-main button:hover::before {
+        width: 110%;
+        height: 125%;
+        cursor: pointer;
+    }
+    
+    .nav-bar-sub-main button:hover::after {
+        width: 110%;
+        height: 125%;
+        cursor: pointer;
+    }
+    
+    .nav-bar-sub-main button:hover {
+        -webkit-box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+                box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+    }
+    #first-grid{
+        background-image: url(background-about-2.jpg);
+        background-position: center;
+        background-size: cover; 
+        height: 65vh;
+        margin-top: -5vh;
+        margin-bottom: 10vh;
+    }
+    .content-main {
+        position: relative;
+        margin: 10vh 0vw 0vh 0vw;
+        height: 65vh;
+        z-index: 1;  
+        
+    }
+    
+    .content-sub-main {
+       
+        margin-top: 10vh;
+        margin-right: 3vw;
+        margin-bottom: 0vh;
+        margin-left: 3vw;
+        display: -ms-grid;
+        display: grid;
+        gap: 12vh 0%;
+            grid-template-areas:
+            "A A A A"
+            "B B B B";
+    }
+    
+    .box-1 {
+        -ms-grid-row: 1;
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 7;
+        grid-area: A;
+        -ms-grid-column-align: center;
+            justify-self: center;
+        margin-top: 5vh;    
+        max-width: 55vw;
+        padding: 3vh 3vw 3vh 3vw;
+        border: 1px solid rgba(0, 0, 0, 0);
+        -webkit-box-shadow: -30px 50px 40px -15px rgba(0, 0, 0, 0.2);
+                box-shadow: -30px 50px 40px -15px rgba(0, 0, 0, 0.2);
+        background-color: white;
+        border-radius: 2px;
+        font-size: 0.9vw;
+    }
+    
+    .box-2 {
+        -ms-grid-row: 3;
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 7;
+        grid-area: B;    
+        -ms-grid-column-align: center;    
+            justify-self: center;
+        max-width: 65vw;
+        padding: 3vh 3vw 3vh 3vw;
+        border: 1px solid rgba(0, 0, 0, 0);
+        background-color: white;
+        -webkit-box-shadow: -10px -30px 40px -15px rgba(0, 0, 0, 0.1);
+                box-shadow: -10px -30px 40px -15px rgba(0, 0, 0, 0.1);
+        border-radius: 2px;
+        font-size: 0.9vw;
+    }
+    
+    @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation: portrait) {
+    
+    .box-1 {
+            -ms-grid-row: 1;
+            -ms-grid-column: 1;
+            -ms-grid-column-span: 7;
+    }
+    
+    .box-2 {
+            -ms-grid-row: 3;
+            -ms-grid-column: 1;
+            -ms-grid-column-span: 7;
+    }
+    }    
+    
+    .footer-main {
+        z-index: 1;
+        background-color: rgba(199, 194, 188, 0.205);
+        font-weight: 600;
+        font-size: 1rem;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        position: relative;
+        opacity: .8;
+        padding: 1%;
+        height: -webkit-fit-content;
+        height: -moz-fit-content;
+        height: fit-content;   
+    }
+    
+    .box-1 {
+        -ms-grid-row: 1;
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 7;
+    }
+    
+    .box-2 {
+        -ms-grid-row: 3;
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 7;
+    }
 }
