--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -1,10 +1,19 @@
+
 .main-content {
     .sub-main-content {
-        background-color: $main-content-bg;
         margin: 7vh 11vw 0vh 11vw;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
         justify-content: space-between;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
     }
     .sub-main-item:nth-child(1) {
@@ -31,11 +40,11 @@
         margin-top: 6vh;
         margin-bottom: 4vh;
         button {
-            font-size: 0.9rem;
+            font-size: 1.1rem;
             padding-top: 1.3vh;
-            padding-right: 2rem;
+            padding-right: 2.2rem;
             padding-bottom: 1.3vh;
-            padding-left: 2rem;
+            padding-left: 2.2rem;
             letter-spacing: 1px;
             font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
             font-weight: 600;
@@ -45,17 +54,34 @@
             border: none;
             color: #fff;
             outline: none;
-            background: linear-gradient(90deg, #e40303, #ff8c00, #ffed00, #008026, #004dff, #750787);
+            background: -webkit-gradient(linear, left top, right top, from($button-clr));
+            background: -o-linear-gradient(left, $button-clr);
+            background: linear-gradient(90deg, $button-clr);
             background-size: 300%;
             border-radius: 30px;
             z-index: 1;
+            -webkit-transition: all 0.4s ease 0s;
+            -o-transition: all 0.4s ease 0s;
             transition: all 0.4s ease 0s;
         }
 
         button:hover {
+            -webkit-animation: ani 8s linear infinite;
             animation: ani 8s linear infinite;
             border: none;
+            -webkit-transform: translateY(-7px);
+            -ms-transform: translateY(-7px);
             transform: translateY(-7px);
+        }
+
+        @-webkit-keyframes ani {
+            0% {
+                background-position: 0%;
+            }
+
+            100% {
+                background-position: 400%;
+            }
         }
 
         @keyframes ani {
@@ -76,45 +102,64 @@
             right: -5px;
             bottom: -5px;
             z-index: -1;
-            background: linear-gradient(to bottom, #e40303, #ff8c00, #ffed00, #008026, #004dff, #750787); /* 90deg */
+            background: -webkit-gradient(linear, left top, right top, from($button-clr));
+            background: -o-linear-gradient(left, $button-clr);
+            background: linear-gradient(90deg, $button-clr);
             background-size: 400%;
             border-radius: 35px;
+            -webkit-transition: 1s;
+            -o-transition: 1s;
             transition: 1s;
         }
 
         button:hover::before {
+            -webkit-filter: blur(20px);
             filter: blur(20px);
         }
 
         button:active {
-            background: linear-gradient(32deg, #e40303, #ff8c00, #ffed00, #008026, #004dff, #750787);
+            background: -o-linear-gradient(58deg, $button-clr);
+            background: linear-gradient(32deg, $button-clr);
         }
     }
     .grid {
-        background-color: $grid-bg;
-        border: red 1px solid;
+        #3 {
+            z-index: 9;
+            position: relative;
+            background-color: red;            
+        }
+        
         .sub-grid {
             h1 {
-                margin: 3% 8% 0% 8%;
-                font-size: 1.3rem;
+                margin: 3vh 8vw 0vh 8vw;
+                font-size: 1.7rem;
                 font-style: italic;
                 font-family: $condensed;
             }
             p {
-                margin: 3% 8% 8% 8%;
-                font-size: .9rem;
+                margin: 3vh 8vw 8vh 8vw;
+                font-size: 1rem;
                 font-family: $comfortaa;
+                color: #808080;
             }
 
             .A {
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                -ms-flex-direction: column;
                 flex-direction: column;
                 background-color: white;
                 margin: $box-centralization;
                 border-radius: $box-radius;
+                -webkit-box-shadow: $box-shadowing;
                 box-shadow: $box-shadowing;
                 img {
                     margin: $icon-centralization;
+                    max-width: -webkit-fit-content;
+                    max-width: -moz-fit-content;
                     max-width: fit-content;
                     padding: 15px;
                     background-color: #f17c0e;
@@ -122,14 +167,22 @@
                 }
             }
             .B {
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                -ms-flex-direction: column;
                 flex-direction: column;
                 background-color: white;
                 margin: $box-centralization;
                 border-radius: $box-radius;
+                -webkit-box-shadow: $box-shadowing;
                 box-shadow: $box-shadowing;
                 img {
                     margin: $icon-centralization;
+                    max-width: -webkit-fit-content;
+                    max-width: -moz-fit-content;
                     max-width: fit-content;
                     padding: 15px;
                     background-color: #594adb;
@@ -137,14 +190,22 @@
                 }
             }
             .C {
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                -ms-flex-direction: column;
                 flex-direction: column;
                 background-color: white;
                 margin: $box-centralization;
                 border-radius: $box-radius;
+                -webkit-box-shadow: $box-shadowing;
                 box-shadow: $box-shadowing;
                 img {
                     margin: $icon-centralization;
+                    max-width: -webkit-fit-content;
+                    max-width: -moz-fit-content;
                     max-width: fit-content;
                     padding: 15px;
                     background-color: #0cb5c5;
@@ -152,14 +213,22 @@
                 }
             }
             .D {
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                -ms-flex-direction: column;
                 flex-direction: column;
                 background-color: white;
                 margin: $box-centralization;
                 border-radius: $box-radius;
+                -webkit-box-shadow: $box-shadowing;
                 box-shadow: $box-shadowing;
                 img {
                     margin: $icon-centralization;
+                    max-width: -webkit-fit-content;
+                    max-width: -moz-fit-content;
                     max-width: fit-content;
                     padding: 15px;
                     background-color: #ee3f47;
