--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,20 +1,35 @@
 .nav-bar {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: 11vh;
     background-color: white;
     .nav-bar-item:nth-child(1) {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
         align-self: center;
         img {
-            padding: 20%;
+            padding: 15%;
             margin-left: 15%;
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
+            -ms-flex-item-align: center;
+            -ms-grid-row-align: center;
             align-self: center;
         }
     }
     .nav-bar-item:nth-child(2) {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
         align-self: center;
+        -ms-grid-column-align: right;
         justify-self: right;
         padding: 20%;
 
