--- a/styles/_var.scss
+++ b/styles/_var.scss
@@ -1,20 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
-$main-content-bg: #f2f2f2;
-$grid-bg: #d9d9d9;
-$button-clr: #5c4edf;
-$abel: "Abel", sans-serif;
-$anton: "Anton", sans-serif;
-$dosis: "Dosis", sans-serif;
-$rubik: "Rubik", sans-serif;
-$kanit: "Kanit", sans-serif;
-$open-sans: "Open Sans", sans-serif;
-$exo: "Exo", sans-serif;
-$pragati: "Pragati Narrow", sans-serif;
-$wallpoet: "Wallpoet";
-$condensed: "Open Sans Condensed", sans-serif;
-$quicksand: "Quicksand", sans-serif;
-$comfortaa: 'Comfortaa';
-$box-centralization: 6vh 5vw 8vh 5vw;
-$box-shadowing: 0px 0px 20px 0px rgba(0, 0, 0, 0.4);
-$box-radius: 2px;
-$icon-centralization: 6% 10% 0% 10%;
+$nav-bar-line-width: 30px;
+$general-text-color: #f8f7ec;
+$general-text-color-black: #000000;
+$header-and-footer-background-color: #cbc1b1;
