--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -2,17 +2,35 @@
   display: flex;
   flex-direction: row;
 }
+
+@mixin contact-section-informations {
+  display: flex;
+  flex-direction: row;
+  /* justify-content: space-around; */ /* dát text doleva */
+  align-items: center;
+}
+
 @mixin sub-offers-flex-and-text-settings {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  
+  justify-content: center;
+  padding: 0.8em;
   h3 {
-      font-size: 0.75rem;
-      letter-spacing: 1px;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
   }
   p {
-      font-size: 0.6rem;
-      color: #777774;
+    margin-top: 0.6em;
+    font-size: 0.6rem;
+    color: #777774;
   }
+}
+
+@mixin registration-button-mixin {
+  padding: 1% 1.5em 1% 1.5em;
+  background-color: #a19b98;
+  border: #a19b98 1px solid;
+  font-size: 0.9rem;
+  box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+  color: $general-text-color;
 }
