--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -6,61 +6,166 @@
         flex-direction: column;
         /* justify-items: center; */
         align-items: center;
-        
 
         h1 {
             color: $general-text-color;
             margin: 1em;
         }
         p {
-            margin: 1em;
+            margin: 0 0.6em 0.5em 0.6em;
             color: $general-text-color;
         }
         button {
-            margin: 1em;
-            padding: 1% 1.5em 1% 1.5em;
-            background-color: #a19b98;
-            border: #a19b98 1px solid;
-            font-size: 0.9rem;
-            box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+            margin: 1.1em;
+            @include registration-button-mixin;
         }
     }
     .offers-section {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
         .offers-section-heading {
+            display: flex;
+            flex-wrap: nowrap;
+            margin-top: 2.3em;
+            font-size: 1rem;
         }
         .offer-section-1 {
-            /* background: url(/wba-pitra-david-2k/individual-work/pitra-2k-web-figma-1/images/offer1.jpg);
-            background-repeat: no-repeat; */
-            img{
-                width:300px;
+            img {
+                width: 300px;
                 height: fit-content;
             }
-            margin-top: 5vh;
+            margin-top: $sub-offers-section-text-top-padding;
             @include offers-flex-settings;
             .sub-offer-section-1 {
                 @include sub-offers-flex-and-text-settings;
             }
         }
         .offer-section-2 {
-            img{
-                width:300px;
+            img {
+                width: 300px;
                 height: fit-content;
             }
-            margin-top: 5vh;
+            margin-top: $sub-offers-section-text-top-padding;
             @include offers-flex-settings;
             .sub-offer-section-2 {
                 @include sub-offers-flex-and-text-settings;
             }
         }
         .offer-section-3 {
-            img{
-                width:300px;
+            img {
+                width: 300px;
                 height: fit-content;
             }
-            margin-top: 5vh;
+            margin-top: $sub-offers-section-text-top-padding;
             @include offers-flex-settings;
             .sub-offer-section-3 {
                 @include sub-offers-flex-and-text-settings;
+            }
+        }
+    }
+}
+.registration-button {
+    display: flex;
+    justify-content: center;
+    margin-top: 2.3em;
+    margin-bottom: 2.3em;
+    button {
+        padding: 1% 1.5em 1% 1.5em;
+        background-color: #a19b98;
+        border: #a19b98 1px solid;
+        font-size: 0.9rem;
+        box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+        color: $general-background-color;
+    }
+}
+
+@media only screen and (min-width: 1600px) and (min-height: 720px) {
+    .content-container {
+        margin: 0;
+        .welcome-banner-container {
+            background-image: url("/wba-pitra-david-2k/individual-work/pitra-2k-web-figma-1/images/index-welcome-beach.png");
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            height: 70vh;
+            display: flex;
+            justify-content: end;
+            flex-direction: column;
+            align-items: flex-end;
+            .welcome-banner {
+                width: 35vw;
+                background-color: rgba(0, 0, 0, 0.3);
+                margin: 0 1.5em 1.5em 0;
+                border-radius: 2px;
+                padding: 1em;
+                h1 {
+                    margin: 0.2em;
+                    font-size: 300%;
+                }
+                p {
+                    margin: 0.2em;
+                    font-size: 140%;
+                }
+                button {
+                    font-size: 130%;
+                }
+            }
+        }
+        .offers-section {
+            .offers-section-heading {
+                font-size: 3em;
+                font-weight: 600;
+                margin-top: 1.5em;
+                margin-bottom: 2.3em;
+            }
+            .offer-sections-container {
+                margin-right: 10vw;
+                margin-left: 10vw;
+                div[class^="offer-section-"] {
+                    margin-top: 0;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+                div[class^="sub-offer-section-"] {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    margin-right: 12%;
+                    margin-left: 12%;
+                    h3 {
+                        font-size: 1.3rem;
+                    }
+                    p {
+                        font-size: 1.1rem;
+                    }
+                }
+
+                img {
+                    width: fit-content;
+                }
+
+                display: grid;
+                /*  gap: 2% 20%; */
+                grid-template-areas: "A  B  C";
+                .offer-section-1 {
+                    grid-area: A;
+                }
+                .offer-section-2 {
+                    grid-area: B;
+                }
+                .offer-section-3 {
+                    grid-area: C;
+                }
+            }
+        }
+        .registration-button {
+            margin-top: 7vh;
+            margin-bottom: 10vh;
+            button {
+                font-size: 130%;
             }
         }
     }
