--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,41 @@
-html {
+@charset "UTF-8";
+html,
+body {
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  background-color: #efeee9;
+  z-index: 1;
+  font-family: "Hubballi", cursive;
   /* font-family: 'Lato', sans-serif; */
   /* font-family: 'Smooch Sans', sans-serif; */
-  font-family: 'Hubballi', cursive;
 }
 
-.helo {
-  position: absolute;
-  z-index: 8;
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .nav-bar-container {
+  /* position: relative;
+    z-index: 9; */
+  height: 8vh;
+  /* malý kousek pod - max-height */
   background-color: #cbc1b1;
-  position: relative;
-  z-index: 9;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.nav-bar-container button {
+  display: none;
 }
 
 .nav-bar-container .nav-bar-sub-container {
@@ -32,7 +55,7 @@ html {
 .nav-bar-container .nav-bar-sub-container .nav-button .line-container {
   width: 60px;
   display: block;
-  margin: 50px auto;
+  /* proužek pod headerem */
   padding: 8px 10px;
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
@@ -63,6 +86,15 @@ html {
   width: 30px;
 }
 
+@media only screen and (min-width: 1600px) and (min-height: 720px) and (orientation: landscape) {
+  .nav-bar-container {
+    height: 10vh;
+  }
+  button {
+    background-color: rgba(0, 0, 0, 0);
+  }
+}
+
 .content-container {
   margin: 3em 2em 3em 2em;
 }
@@ -88,24 +120,46 @@ html {
 }
 
 .content-container .welcome-banner p {
-  margin: 1em;
+  margin: 0 0.6em 0.5em 0.6em;
   color: #f8f7ec;
 }
 
 .content-container .welcome-banner button {
-  margin: 1em;
+  margin: 1.1em;
   padding: 1% 1.5em 1% 1.5em;
   background-color: #a19b98;
   border: #a19b98 1px solid;
   font-size: 0.9rem;
   -webkit-box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+  color: #f8f7ec;
+}
+
+.content-container .offers-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.content-container .offers-section .offers-section-heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  margin-top: 2.3em;
+  font-size: 1rem;
 }
 
 .content-container .offers-section .offer-section-1 {
-  /* background: url(/wba-pitra-david-2k/individual-work/pitra-2k-web-figma-1/images/offer1.jpg);
-            background-repeat: no-repeat; */
-  margin-top: 5vh;
+  margin-top: 4vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -130,23 +184,25 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0.8em;
 }
 
 .content-container .offers-section .offer-section-1 .sub-offer-section-1 h3 {
-  font-size: 0.75rem;
+  font-size: 0.8rem;
   letter-spacing: 1px;
 }
 
 .content-container .offers-section .offer-section-1 .sub-offer-section-1 p {
+  margin-top: 0.6em;
   font-size: 0.6rem;
   color: #777774;
 }
 
 .content-container .offers-section .offer-section-2 {
-  margin-top: 5vh;
+  margin-top: 4vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -171,23 +227,25 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0.8em;
 }
 
 .content-container .offers-section .offer-section-2 .sub-offer-section-2 h3 {
-  font-size: 0.75rem;
+  font-size: 0.8rem;
   letter-spacing: 1px;
 }
 
 .content-container .offers-section .offer-section-2 .sub-offer-section-2 p {
+  margin-top: 0.6em;
   font-size: 0.6rem;
   color: #777774;
 }
 
 .content-container .offers-section .offer-section-3 {
-  margin-top: 5vh;
+  margin-top: 4vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -212,22 +270,457 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0.8em;
 }
 
 .content-container .offers-section .offer-section-3 .sub-offer-section-3 h3 {
-  font-size: 0.75rem;
+  font-size: 0.8rem;
   letter-spacing: 1px;
 }
 
 .content-container .offers-section .offer-section-3 .sub-offer-section-3 p {
+  margin-top: 0.6em;
   font-size: 0.6rem;
   color: #777774;
 }
 
-.footer-container {
+.registration-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 2.3em;
+  margin-bottom: 2.3em;
+}
+
+.registration-button button {
+  padding: 1% 1.5em 1% 1.5em;
+  background-color: #a19b98;
+  border: #a19b98 1px solid;
+  font-size: 0.9rem;
+  -webkit-box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+  color: #efeee9;
+}
+
+@media only screen and (min-width: 1600px) and (min-height: 720px) {
+  .content-container {
+    margin: 0;
+  }
+  .content-container .welcome-banner-container {
+    background-image: url("/wba-pitra-david-2k/individual-work/pitra-2k-web-figma-1/images/index-welcome-beach.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 70vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  .content-container .welcome-banner-container .welcome-banner {
+    width: 35vw;
+    background-color: rgba(0, 0, 0, 0.3);
+    margin: 0 1.5em 1.5em 0;
+    border-radius: 2px;
+    padding: 1em;
+  }
+  .content-container .welcome-banner-container .welcome-banner h1 {
+    margin: 0.2em;
+    font-size: 300%;
+  }
+  .content-container .welcome-banner-container .welcome-banner p {
+    margin: 0.2em;
+    font-size: 140%;
+  }
+  .content-container .welcome-banner-container .welcome-banner button {
+    font-size: 130%;
+  }
+  .content-container .offers-section .offers-section-heading {
+    font-size: 3em;
+    font-weight: 600;
+    margin-top: 1.5em;
+    margin-bottom: 2.3em;
+  }
+  .content-container .offers-section .offer-sections-container {
+    margin-right: 10vw;
+    margin-left: 10vw;
+    display: -ms-grid;
+    display: grid;
+    /*  gap: 2% 20%; */
+        grid-template-areas: "A  B  C";
+  }
+  .content-container .offers-section .offer-sections-container div[class^="offer-section-"] {
+    margin-top: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .content-container .offers-section .offer-sections-container div[class^="sub-offer-section-"] {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-right: 12%;
+    margin-left: 12%;
+  }
+  .content-container .offers-section .offer-sections-container div[class^="sub-offer-section-"] h3 {
+    font-size: 1.3rem;
+  }
+  .content-container .offers-section .offer-sections-container div[class^="sub-offer-section-"] p {
+    font-size: 1.1rem;
+  }
+  .content-container .offers-section .offer-sections-container img {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .content-container .offers-section .offer-sections-container .offer-section-1 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: A;
+  }
+  .content-container .offers-section .offer-sections-container .offer-section-2 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: B;
+  }
+  .content-container .offers-section .offer-sections-container .offer-section-3 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
+    grid-area: C;
+  }
+  .content-container .registration-button {
+    margin-top: 7vh;
+    margin-bottom: 10vh;
+  }
+  .content-container .registration-button button {
+    font-size: 130%;
+  }
+}
+
+footer {
+  height: 8vh;
   background-color: #cbc1b1;
+  position: relative;
+  /* fixed smaže škvíru pod */
+  bottom: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer .footer-information {
+  padding: 1em 0 1em 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media only screen and (min-width: 1600px) and (min-height: 720px) {
+  footer {
+    height: 10vh;
+    position: relative;
+  }
+}
+
+.section-content-container {
+  height: 84vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 5vw 0 5vw;
+}
+
+.section-content-container .sub-section-content-container {
+  margin: 2vh 0 2vh 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  /* align-items: space-evenly; */
+  /* width: 60vw; */
+}
+
+.section-content-container .sub-section-content-container img {
+  margin-right: 6vw;
+  /* filter: drop-shadow(0px 0px 8px black); */
+}
+
+.section-content-container .sub-section-content-container .section-content-item:nth-child(1) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  /* justify-content: space-around; */
+  /* dát text doleva */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section-content-container .sub-section-content-container .section-content-item:nth-child(2) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  /* justify-content: space-around; */
+  /* dát text doleva */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section-content-container .sub-section-content-container .section-content-item:nth-child(3) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  /* justify-content: space-around; */
+  /* dát text doleva */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section-content-container .sub-section-content-container .section-content-item:nth-child(4) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  /* justify-content: space-around; */
+  /* dát text doleva */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section-content-container .sub-section-content-container .section-content-item:nth-child(5) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  /* justify-content: space-around; */
+  /* dát text doleva */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section-content-container .sub-section-content-container .section-content-item:nth-child(6) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  /* justify-content: space-around; */
+  /* dát text doleva */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media only screen and (min-width: 1600px) and (min-height: 720px) {
+  .section-content-container {
+    height: 80vh;
+  }
+  .section-content-container div[class^="section-content-item"] {
+    width: 15vw;
+    /* display: flex;
+      flex-direction: row;
+      justify-content: space-evenly; */
+  }
+  .section-content-container .sub-section-content-container {
+    display: -ms-grid;
+    display: grid;
+    gap: 0 15vh;
+    margin: 17vh 0 17vh 0;
+        grid-template-areas: "A B C" "D E F";
+  }
+  .section-content-container .sub-section-content-container img {
+    margin: 0;
+    scale: 150%;
+  }
+  .section-content-container .sub-section-content-container p {
+    margin-left: 4vw;
+    scale: 150%;
+  }
+  .section-content-container .sub-section-content-container .section-content-item:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: A;
+  }
+  .section-content-container .sub-section-content-container .section-content-item:nth-child(2) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: B;
+  }
+  .section-content-container .sub-section-content-container .section-content-item:nth-child(3) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
+    grid-area: C;
+  }
+  .section-content-container .sub-section-content-container .section-content-item:nth-child(4) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: D;
+  }
+  .section-content-container .sub-section-content-container .section-content-item:nth-child(5) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+    grid-area: E;
+  }
+  .section-content-container .sub-section-content-container .section-content-item:nth-child(6) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 3;
+    grid-area: F;
+  }
+}
+
+.contact-content-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  /* 
+    justify-content: center;
+    align-items: center; */
+  height: 84vh;
+}
+
+.contact-content-container .contact-content-sub-container {
+  height: 75vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 7vh 3vw 6vh 3vw;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contact-content-container .contact-content-sub-container input {
+  background-color: #cdcac7;
+  border: 1px solid #cdcac7;
+}
+
+.contact-content-container .contact-content-sub-container .contact-content-sub-item:nth-child(2) {
+  margin-top: 1vh;
+  /* dodělat mezery mezi inputy */
+}
+
+.contact-content-container .contact-content-sub-container .contact-content-sub-item:nth-child(6) {
+  border: 1px #0026ff solid;
+}
+
+.contact-content-container .contact-content-sub-container .contact-content-sub-item:nth-child(6) input {
+  height: 15vh;
+}
+
+.contact-content-container .registration-button-contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 2.3em;
+}
+
+.contact-content-container .registration-button-contact button {
+  padding: 1% 1.5em 1% 1.5em;
+  background-color: #a19b98;
+  border: #a19b98 1px solid;
+  font-size: 0.9rem;
+  -webkit-box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+  color: #efeee9;
 }
 /*# sourceMappingURL=styles.css.map */
