--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,7 +1,4 @@
 .nav-bar-container {
-    button {
-        display: none;
-    }
     /* position: relative;
     z-index: 9; */
     height: 8vh; /* malý kousek pod - max-height */
@@ -9,14 +6,35 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    button {
+        background-color: rgba(0, 0, 0, 0);
+        border: 1px solid rgba(0, 0, 0, 0);
+        color: $general-text-color-black;
+        font-size: 1.2rem;
+        font-weight: 600;
+        padding: 8px;
+        border-radius: 2px;
+        transition-duration: 0.3s;
+        &:hover {
+            transition-duration: 0.3s;
+            background-color: rgba(0, 0, 0, 0.2);
+        }
+    }
     .nav-bar-sub-container {
+        .nav-icon {
+            img {
+                min-width: 100%;
+                height: 90%;
+            }
+        }
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: 80px;
-        margin: 0 1.6em 0 1.6em;
+        margin: 0 3% 0 3%;
 
         .nav-button {
+            position: relative;
+            z-index: 9;
             .line-container {
                 width: 60px;
                 display: block;
@@ -48,14 +66,30 @@
             }   */
             }
         }
+        .buttons-contaier {
+            /* display: none; */
+            position: relative;
+            z-index: 8;
+
+            .buttons {
+                
+            }
+        }
     }
 }
 
 @media only screen and (min-width: 1600px) and (min-height: 720px) and (orientation: landscape) {
     .nav-bar-container {
         height: 10vh;
-    }
-    button {
-        background-color: rgba(0, 0, 0, 0);
+        .nav-bar-sub-container {
+            .nav-button {
+                display: none;
+            }
+        }
+        .buttons-contaier {
+            display: flex;
+            .buttons {
+            }
+        }
     }
 }
