--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -72,8 +72,8 @@
     margin-bottom: 2.3em;
     button {
         padding: 1% 1.5em 1% 1.5em;
-        background-color: #a19b98;
-        border: #a19b98 1px solid;
+        background-color: $button-bg-color;
+        border: $button-bg-color 1px solid;
         font-size: 0.9rem;
         box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
         color: $general-background-color;
@@ -88,7 +88,7 @@
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
-            height: 70vh;
+            height: 85vh;
             display: flex;
             justify-content: end;
             flex-direction: column;
