--- a/styles/_var.scss
+++ b/styles/_var.scss
@@ -4,3 +4,4 @@ $general-text-color-black: #000000;
 $header-and-footer-background-color: #cbc1b1;
 $general-background-color: #efeee9;
 $sub-offers-section-text-top-padding: 4vh;
+$button-bg-color: #7c7474;
