--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -67,9 +67,8 @@
         height: 8vh;
         position: sticky;
         top: 0;
+        background-color: white;
         z-index: 999;
-        display: flex;
-        align-items: center;
         nav {
             margin-inline: 1em;
             .navbar-main {
