--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,13 +1,8 @@
 @media only screen and (min-width: $width-desktop-bp) and (max-width: $max-width-desktop-bp) {
     header {
-        height: 4.5em;
-        margin-bottom: 4em;
-        position: sticky;
-        top: 0;
-        background-color: white;
-        z-index: 999;
+        @include header-mixin(4em);
         nav {
-            margin-inline: 8em;
+            margin-inline: $desktop-margin-inline;
             .navbar-main {
                 display: flex;
                 justify-content: space-between;
@@ -25,36 +20,8 @@
                     margin: 10px;
                     display: flex;
                     align-items: center;
-                    .button-container li {
-                        position: relative;
-                        float: left;
-                        list-style: none;
-                        width: fit-content;
-                        text-align: center;
-                        background-color: transparent;
-                        font-size: clamp(90%, 120%, 125%);
-                        margin-left: .7em;
-                    }
-                    .button-container a {
-                        text-transform: uppercase;
-                        text-decoration: none;
-                        color: black;
-                        .button-container a:after {
-                            background: none repeat scroll 0 0 transparent;
-                            bottom: 0;
-                            content: "";
-                            height: 2px;
-                            left: 50%;
-                            position: absolute;
-                            background: black;
-                            transition: width 0.3s ease 0s, left 0.3s ease 0s;
-                            width: 0;
-                        }
-                        .button-container a:hover:after {
-                            width: 100%;
-                            left: 0;
-                        }
-                    }
+                    letter-spacing: -1px;
+                    @include button-header-hover;
                 }
             }
         }
@@ -63,14 +30,9 @@
 
 @media only screen and (min-width: $width-tablet-bp) and (max-width: $max-width-tablet-bp) {
     header {
-        height: 4.5em;
-        margin-bottom: 4em;
-        position: sticky;
-        top: 0;
-        background-color: white;
-        z-index: 999;
+        @include header-mixin(4em);
         nav {
-            margin-inline: 4em;
+            margin-inline: $tablet-margin-inline;
             .navbar-main {
                 display: flex;
                 justify-content: space-between;
@@ -91,36 +53,8 @@
                     margin: 10px;
                     display: flex;
                     align-items: center;
-                    .button-container li {
-                        position: relative;
-                        float: left;
-                        list-style: none;
-                        width: fit-content;
-                        text-align: center;
-                        background-color: transparent;
-                        font-size: 100%;
-                        margin-left: .7em;
-                    }
-                    .button-container a {
-                        text-transform: uppercase;
-                        text-decoration: none;
-                        color: black;
-                        .button-container a:after {
-                            background: none repeat scroll 0 0 transparent;
-                            bottom: 0;
-                            content: "";
-                            height: 2px;
-                            left: 50%;
-                            position: absolute;
-                            background: black;
-                            transition: width 0.3s ease 0s, left 0.3s ease 0s;
-                            width: 0;
-                        }
-                        .button-container a:hover:after {
-                            width: 100%;
-                            left: 0;
-                        }
-                    }
+                    letter-spacing: -1px;
+                    @include button-header-hover;
                 }
             }
         }
@@ -129,12 +63,7 @@
 
 @media only screen and (min-width: $width-iphone8-bp) and (max-width: $max-width-iphone8-bp) {
     header {
-        height: 4.5em;
-        margin-bottom: 1em;
-        position: sticky;
-        top: 0;
-        background-color: white;
-        z-index: 999;
+        @include header-mixin(1em);
         nav {
             margin-inline: .6em;
             .navbar-main {
@@ -157,21 +86,9 @@
                     margin: 10px;
                     display: flex;
                     align-items: center;
-                    .button-container li {
-                        position: relative;
-                        float: left;
-                        list-style: none;
-                        width: fit-content;
-                        text-align: center;
-                        background-color: transparent;
-                        font-size: 90%;
-                        margin-left: .7em;
-                    }
-                    .button-container a {
-                        text-transform: uppercase;
-                        text-decoration: none;
-                        color: black;
-                    }
+                    letter-spacing: -1px;
+                    @include button-header-hover;
+                    font-size: 90%;
                 }
             }
         }
@@ -180,12 +97,7 @@
 
 @media only screen and (min-width: $width-general-bp) and (max-width: $max-width-general-bp) {
     header {
-        height: 4.5em;
-        margin-bottom: 1em;
-        position: sticky;
-        top: 0;
-        background-color: white;
-        z-index: 999;
+        @include header-mixin(1em);
         nav {
             margin-inline: .6em;
             .navbar-main {
@@ -208,21 +120,9 @@
                     margin: 10px;
                     display: flex;
                     align-items: center;
-                    .button-container li {
-                        position: relative;
-                        float: left;
-                        list-style: none;
-                        width: fit-content;
-                        text-align: center;
-                        background-color: transparent;
-                        font-size: 90%;
-                        margin-left: .7em;
-                    }
-                    .button-container a {
-                        text-transform: uppercase;
-                        text-decoration: none;
-                        color: black;
-                    }
+                    letter-spacing: -1px;
+                    @include button-header-hover;
+                    font-size: 90%;
                 }
             }
         }
