--- a/styles/_homepage.scss
+++ b/styles/_homepage.scss
@@ -1,16 +1,11 @@
 @media only screen and (min-width: $width-desktop-bp) and (max-width: $max-width-desktop-bp) {
     #index {
-        margin-inline: 8em;
+        margin-inline: $desktop-margin-inline;
         .first-section {
             display: flex;
             flex-direction: column;
             #helper {
-                display: grid;
-                .first-section-heading-container,
-                .first-section-image-container {
-                    grid-column: 1;
-                    grid-row: 1;
-                }
+                @include helper-mixin;
             }
             .first-section-heading-container {
                 margin-top: 2em;
@@ -18,25 +13,14 @@
                 width: 100%;
                 align-items: center;
                 h1 {
-                    font-family: customFontFour;
-                    color: white;
-                    position: absolute;
-                    z-index: 9;
-                    display: inline-flex;
-                    background-color: transparent;
-                    font-weight: bolder;
-                    font-size: 6rem;
-                    transition-duration: .2s;
-                    user-select: none;
+                    @include homepage-heading-h1(6rem);
                 }
             }
             .first-section-image-container {
                 height: 50%;
                 width: 100%;
                 margin-top: 3em;
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
+                @include flex-row-center;
                 position: relative;
                 img {
                     width: 100%;
@@ -45,18 +29,7 @@
                     transition-duration: .5s;
                     filter: blur(1px) grayscale(1);
                 }
-                img:hover {
-                    filter: blur(0) grayscale(0);
-                    z-index: 10;
-                }
-                .first-section-image-container:nth-child(1) {
-                    padding-bottom: 5em;
-                    height: 5em;
-                }
-                .first-section-image-container:nth-child(2) {
-                    align-self: flex-end;
-                    height: 100%;
-                }
+                @include first-section-image-hover;
             }
         }
         .first-section-paragraph-container {
@@ -65,11 +38,7 @@
                 padding: 2em 4em;
                 padding-left: 1em;
                 font-size: 1.6rem;
-                transition-duration: .2s;
                 border-left: 3px solid black;
-            }
-            h2:hover {
-                transition-duration: .2s;
             }
         }
         .second-section {
@@ -79,9 +48,7 @@
                 display: flex;
                 @include flex-column-center;
                 .second-section-first-image-desc-container {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
+                    @include flex-row-center;
                     padding-right: 14em;
                     padding-bottom: 1em;
                     .second-section-first-desc-container {
@@ -89,9 +56,7 @@
                         height: 100%;
                         padding-left: 2em;
                         p {
-                            width: 100%;
-                            max-width: 25em;
-                            height: 100%;
+                            @include homepage-image-desc-p;
                         }
                         h4 {
                             padding-bottom: .3em;
@@ -106,9 +71,7 @@
                     }
                 }
                 .second-section-second-image-desc-container {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
+                    @include flex-row-center;
                     padding-top: 1em;
                     padding-left: 13em;
                     .second-section-second-desc-container {
@@ -116,11 +79,7 @@
                         height: 100%;
                         padding-right: 4em;
                         p {
-                            width: 40vw;
-                            max-width: 25em;
-                            height: 100%;
-                            /* padding: max(3vw, 1em); */
-                            /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                            @include homepage-image-desc-p;
                         }
                         h4 {
                             padding-bottom: .3em;
@@ -135,18 +94,8 @@
                 }
             }
             .second-section-paragraph-container {
-                min-height: 20%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
                 margin-inline: 4em;
-                box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
-                h3 {
-                    margin: 4em;
-                    margin-inline: 6em;
-                    text-align: center;
-                    font-size: 1.2rem;
-                }
+                @include section-paragraph-container(6em);
             }
         }
         .third-section {
@@ -198,18 +147,13 @@
 
 @media only screen and (min-width: $width-tablet-bp) and (max-width: $max-width-tablet-bp) {
     #index {
-        margin-inline: 4em;
+        margin-inline: $tablet-margin-inline;
         .first-section {
             display: flex;
             flex-direction: column;
             margin-bottom: 3em;
             #helper {
-                display: grid;
-                .first-section-heading-container,
-                .first-section-image-container {
-                    grid-column: 1;
-                    grid-row: 1;
-                }
+                @include helper-mixin;
             }
             .first-section-heading-container {
                 margin-top: 2em;
@@ -217,25 +161,14 @@
                 width: 100%;
                 align-items: center;
                 h1 {
-                    font-family: customFontFour;
-                    color: white;
-                    position: absolute;
-                    z-index: 9;
-                    display: inline-flex;
-                    background-color: transparent;
-                    font-weight: bolder;
-                    font-size: 4rem;
-                    transition-duration: .2s;
-                    user-select: none;
+                    @include homepage-heading-h1(4rem);
                 }
             }
             .first-section-image-container {
                 height: 50%;
                 width: 100%;
                 margin-top: 3em;
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
+                @include flex-row-center;
                 position: relative;
                 img {
                     width: 100%;
@@ -245,18 +178,7 @@
                     transition-duration: .5s;
                     filter: blur(1px) grayscale(1);
                 }
-                img:hover {
-                    filter: blur(0) grayscale(0);
-                    z-index: 10;
-                }
-                .first-section-image-container:nth-child(1) {
-                    padding-bottom: 5em;
-                    height: 5em;
-                }
-                .first-section-image-container:nth-child(2) {
-                    align-self: flex-end;
-                    height: 100%;
-                }
+                @include first-section-image-hover;
             }
         }
         .first-section-paragraph-container {
@@ -265,11 +187,7 @@
                 padding: 2em 2em;
                 padding-left: 1em;
                 font-size: 1.2rem;
-                transition-duration: .2s;
                 border-left: 3px solid black;
-            }
-            h2:hover {
-                transition-duration: .2s;
             }
         }
         .second-section {
@@ -327,17 +245,7 @@
                 }
             }
             .second-section-paragraph-container {
-                min-height: 20%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
-                h3 {
-                    margin: 4em;
-                    margin-inline: 1em;
-                    text-align: center;
-                    font-size: 1.2rem;
-                }
+                @include section-paragraph-container(1em);
             }
         }
         .third-section {
@@ -390,18 +298,13 @@
 
 @media only screen and (min-width: $width-iphone8-bp) and (max-width: $max-width-iphone8-bp) {
     #index {
-        margin-inline: 1em;
+        margin-inline: $mobile-dev-margin-inline;
         .first-section {
             display: flex;
             flex-direction: column;
             margin-bottom: 3em;
             #helper {
-                display: grid;
-                .first-section-heading-container,
-                .first-section-image-container {
-                    grid-column: 1;
-                    grid-row: 1;
-                }
+                @include helper-mixin;
             }
             .first-section-heading-container {
                 margin-top: 2em;
@@ -409,25 +312,14 @@
                 width: 100%;
                 align-items: center;
                 h1 {
-                    font-family: customFontFour;
-                    color: white;
-                    position: absolute;
-                    z-index: 9;
-                    display: inline-flex;
-                    background-color: transparent;
-                    font-weight: bolder;
-                    font-size: 3.5rem;
-                    transition-duration: .2s;
-                    user-select: none;
+                    @include homepage-heading-h1(3.5rem);
                 }
             }
             .first-section-image-container {
                 height: 50%;
                 width: 100%;
                 margin-top: 3em;
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
+                @include flex-row-center;
                 position: relative;
                 img {
                     margin-inline: 1em;
@@ -437,18 +329,7 @@
                     transition-duration: .5s;
                     filter: blur(1px) grayscale(1);
                 }
-                img:hover {
-                    filter: blur(0) grayscale(0);
-                    z-index: 10;
-                }
-                .first-section-image-container:nth-child(1) {
-                    padding-bottom: 5em;
-                    height: 5em;
-                }
-                .first-section-image-container:nth-child(2) {
-                    align-self: flex-end;
-                    height: 100%;
-                }
+                @include first-section-image-hover;
             }
         }
         .first-section-paragraph-container {
@@ -457,11 +338,7 @@
                 padding: 2em 2em;
                 padding-left: 1em;
                 font-size: 1.2rem;
-                transition-duration: .2s;
                 border-left: 3px solid black;
-            }
-            h2:hover {
-                transition-duration: .2s;
             }
         }
         .second-section {
@@ -476,9 +353,7 @@
                         height: 100%;
                         margin-inline: 1em;
                         p {
-                            width: 100%;
-                            max-width: 25em;
-                            height: 100%;
+                            @include homepage-image-desc-p;
                         }
                         h4 {
                             margin-top: 1em;
@@ -502,9 +377,7 @@
                         height: 100%;
                         margin-inline: 1em;
                         p {
-                            width: 100%;
-                            max-width: 25em;
-                            height: 100%;
+                            @include homepage-image-desc-p;
                         }
                         h4 {
                             margin-top: 1em;
@@ -519,17 +392,7 @@
                 }
             }
             .second-section-paragraph-container {
-                min-height: 20%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
-                h3 {
-                    margin: 4em;
-                    margin-inline: 1em;
-                    text-align: center;
-                    font-size: 1.2rem;
-                }
+                @include section-paragraph-container(1em);
             }
         }
         .third-section {
@@ -582,18 +445,13 @@
 
 @media only screen and (min-width: $width-general-bp) and (max-width: $max-width-general-bp) {
     #index {
-        margin-inline: 1em;
+        margin-inline: $mobile-dev-margin-inline;
         .first-section {
             display: flex;
             flex-direction: column;
             margin-bottom: 3em;
             #helper {
-                display: grid;
-                .first-section-heading-container,
-                .first-section-image-container {
-                    grid-column: 1;
-                    grid-row: 1;
-                }
+                @include helper-mixin;
             }
             .first-section-heading-container {
                 margin-top: 2em;
@@ -601,25 +459,14 @@
                 width: 100%;
                 align-items: center;
                 h1 {
-                    font-family: customFontFour;
-                    color: white;
-                    position: absolute;
-                    z-index: 9;
-                    display: inline-flex;
-                    background-color: transparent;
-                    font-weight: bolder;
-                    font-size: 2rem;
-                    transition-duration: .2s;
-                    user-select: none;
+                    @include homepage-heading-h1(2rem);
                 }
             }
             .first-section-image-container {
                 height: 50%;
                 width: 100%;
                 margin-top: 3em;
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
+                @include flex-row-center;
                 position: relative;
                 img {
                     width: 100%;
@@ -628,18 +475,7 @@
                     transition-duration: .5s;
                     filter: blur(1px) grayscale(1);
                 }
-                img:hover {
-                    filter: blur(0) grayscale(0);
-                    z-index: 10;
-                }
-                .first-section-image-container:nth-child(1) {
-                    padding-bottom: 5em;
-                    height: 5em;
-                }
-                .first-section-image-container:nth-child(2) {
-                    align-self: flex-end;
-                    height: 100%;
-                }
+                @include first-section-image-hover;
             }
         }
         .first-section-paragraph-container {
@@ -648,11 +484,7 @@
                 padding: 2em 2em;
                 padding-left: 1em;
                 font-size: 1rem;
-                transition-duration: .2s;
                 border-left: 3px solid black;
-            }
-            h2:hover {
-                transition-duration: .2s;
             }
         }
         .second-section {
@@ -667,9 +499,7 @@
                         height: 100%;
                         margin-inline: 1em;
                         p {
-                            width: 100%;
-                            max-width: 25em;
-                            height: 100%;
+                            @include homepage-image-desc-p;
                         }
                         h4 {
                             margin-top: 1em;
@@ -693,9 +523,7 @@
                         height: 100%;
                         margin-inline: 1em;
                         p {
-                            width: 100%;
-                            max-width: 25em;
-                            height: 100%;
+                            @include homepage-image-desc-p;
                         }
                         h4 {
                             margin-top: 1em;
@@ -710,17 +538,7 @@
                 }
             }
             .second-section-paragraph-container {
-                min-height: 20%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
-                h3 {
-                    margin: 4em;
-                    margin-inline: 1em;
-                    text-align: center;
-                    font-size: 1.2rem;
-                }
+                @include section-paragraph-container(1em);
             }
         }
         .third-section {
