--- a/styles/_var.scss
+++ b/styles/_var.scss
@@ -22,6 +22,9 @@ $font-amatic: customFontTwo;
 $footer-color: #857f7fa6;
 $form-bottom-border-color: black;
 $form-transition-dur-setting: all 0.30s ease-in-out;
+$desktop-margin-inline: 8em;
+$tablet-margin-inline: 4em;
+$mobile-dev-margin-inline: 1em;
 
 /* breakpoints desktop */
 
